--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "Workday Skills Autofill",
     "version": "1.0",
     "description": "Automatically fills the Workday skills section with predefined skills.",
-    "permissions": ["storage", "scripting", "activeTab"],
+    "permissions": ["storage", "scripting", "activeTab", "contextMenus"],
     "host_permissions": ["https://*.workday.com/*"],
     "background": {
       "service_worker": "background.js"
