feat: add keyboard shortcut for autofill

--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,40 @@
 {
-    "manifest_version": 3,
-    "name": "Workday Skills Autofill",
-    "version": "1.0",
-    "description": "Automatically fills the Workday skills section with predefined skills.",
-    "permissions": ["storage", "scripting", "activeTab", "contextMenus"],
-    "host_permissions": ["https://*.workday.com/*"],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "action": {
-      "default_popup": "popup.html"
-    },
-    "content_scripts": [
-      {
-        "matches": ["https://*.workday.com/*"],
-        "js": ["content.js"]
-      }
-    ]
+  "manifest_version": 3,
+  "name": "Workday Skills Autofill",
+  "version": "1.0",
+  "description": "Automatically fills the Workday skills section with predefined skills.",
+  "permissions": [
+    "storage",
+    "scripting",
+    "activeTab",
+    "contextMenus"
+  ],
+  "host_permissions": [
+    "https://*.workday.com/*"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "https://*.workday.com/*"
+      ],
+      "js": [
+        "content.js"
+      ]
+    }
+  ],
+  "commands": {
+    "autofill-skills": {
+      "suggested_key": {
+        "default": "Alt+Shift+F",
+        "mac": "Alt+Shift+F"
+      },
+      "description": "Autofill Workday Skills"
+    }
   }
-  
+}
