feat: implement universal magic wand

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "contextMenus"
   ],
   "host_permissions": [
-    "https://*.workday.com/*"
+    "<all_urls>"
   ],
   "background": {
     "service_worker": "background.js"
